Release 3.0.1
Features
* Improve transparent window drawing performance on w32

Bug Fixes
* Ensure nested structure arrays initialized with Structure.toArray use the
  appropriate native memory.
* Ensure structure size is calculated prior to converting to array

Release 3.0
Features
* More supported platforms, via GCC's libffi (wmeissner)
* Support struct by value as parameter and return value (duncan)
* Support struct by reference within structures
* Provide access to native peer for java.awt.Component 
* Provide access to native peer on OS X.
* Support MINGW32 builds (fullung)
* Allow per-field Structure read/write by field name
* Avoid writing Structure fields marked 'volatile'
* Read and wrap function pointers in Structure fields when read with a Java
  proxy to allow easy Java-side invocation (Ken Larson)
* Support array-backed Buffers as arguments (wmeissner)
* Auto-conversion of custom types (wmeissner)
* Allow pointer type-safety
* Optional VM crash protection, via Native.setProtected(boolean)
* Auto-convert WString[]
* Provide library synchronization wrapper similar to Collections.synchronizedX
* Support lookup of OSX framework libraries by name
* Explicit access to shared library global data
* Invocation interception to facilitate translation of C preprocessor macros
  and inline functions
* Provide utility to determine Web Start native library cache location;
  auto-include this path if jnidispatch is included as a <nativelib>
  (robertengels) 
* Provide access to aligned memory
* Versioning information embedded in jna.jar and native library

Bug Fixes
* Avoid attempts to free native library if it failed to load (wmeissner)
* Explicitly check method signatures for varargs instead of heuristically
  guessing (wmeissner)
* Disallow declaring Pointer-derived fields in Structures (Function, Memory)
* Ensure Object.toString/hashCode/equals methods are intercepted on proxyied
  interfaces
* Update X11 library for 64-bit use (wmeissner)