@@ -6,6 +6,7 @@ Bug Fixes
 * Ensure nested structure arrays initialized with Structure.toArray use the
   appropriate native memory.
 * Ensure structure size is calculated prior to converting to array
+* Avoid creating new windows when setting a window mask
 
 Release 3.0
 Features
